--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ img{
 
 footer{
     display: flex;
-    background-color: white;
+    background-color: var(--verdin);
     color: black;
     border: 2px solid var(--cor-de-texto);
     margin: 5px 0;
