--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 :root{
 --cor-de-fundo: #80f380;
 --cor-do-cabeçalho: rgba(12, 119, 17, 0.671);
---verdin: #cbf7ba;
+--cor-de-fundo-2: #cbf7ba;
+--cor-de-borda: black;
 }
 
 body{
@@ -16,12 +17,13 @@ font-family: "Fira Sans Condensed", sans-serif;
 header{
     display: flex;
     align-items: center;
+    color: whitesmoke;
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: stretch;
     justify-content: space-evenly;
     background-color: var(--cor-do-cabeçalho);
-    border: 2px solid black;
+    border: 2px solid var(--cor-de-borda);
     
 
 }
@@ -37,8 +39,8 @@ img{
 
 .apresentacao{
     display: flex;
-    background-color: var(--verdin);
-    border: 2px solid black;
+    background-color: var(--cor-de-fundo-2);
+    border: 2px solid var(--cor-de-borda);
     margin: 5px 0;
     padding: 15px;
     border-radius: 20px;
@@ -48,8 +50,8 @@ img{
 
 .beneficios{
     display: flex;
-    border: 2px solid black;
-    background-color: var(--verdin);
+    border: 2px solid var(--cor-de-borda);
+    background-color: var(--cor-de-fundo-2);
     margin: 5px 0;
     padding: 15px;
     border-radius: 20px;
@@ -68,7 +70,7 @@ footer{
     justify-content: center;
     background-color: var(--cor-do-cabeçalho);
     color: black;
-    border: 2px solid black;
+    border: 2px solid var(--cor-de-borda);
     margin: 5px 0;
     padding: 15px;
     border-radius: 20px;
