--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 --cor-do-cabeçalho: rgba(12, 119, 17, 0.671);
 --cor-de-fundo-2: #cbf7ba;
 --cor-de-borda: black;
+--cor-de-texto-2: whitesmoke;
 }
 
 body{
@@ -17,7 +18,7 @@ font-family: "Fira Sans Condensed", sans-serif;
 header{
     display: flex;
     align-items: center;
-    color: whitesmoke;
+    color: var(--cor-de-texto-2);
     flex-direction: row;
     flex-wrap: nowrap;
     align-content: stretch;
@@ -69,7 +70,7 @@ footer{
     display: flex;
     justify-content: center;
     background-color: var(--cor-do-cabeçalho);
-    color: black;
+    color: var(--cor-de-texto-2);
     border: 2px solid var(--cor-de-borda);
     margin: 5px 0;
     padding: 15px;
