--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 :root{
---cor-de-fundo: #80f380;
+--cor-de-fundo: #f7f5dd;
 --cor-do-cabeçalho: rgba(12, 119, 17, 0.671);
 --cor-de-fundo-2: #cbf7ba;
 --cor-de-borda: black;
