--- a/style.css
+++ b/style.css
@@ -22,11 +22,13 @@ header{
     flex-wrap: nowrap;
     align-content: stretch;
     justify-content: space-evenly;
+    padding: 15px;
+    border-radius: 20px;
+    border: 2px solid var(--cor-de-borda);
     color: var(--cor-de-texto-2);
     background-color: var(--cor-do-cabeçalho);
-    border: 2px solid var(--cor-de-borda);
     
-
+    
 }
 
 img{
