--- a/style.css
+++ b/style.css
@@ -37,14 +37,19 @@ img{
 }
 
 .hamert{
-    width: 80%;
+    width: 100%;
 }
 
 .gif{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: row-reverse;
+    margin: 5px 0;
+    padding: 15px;
+    border-radius: 20px;
+    border: 2px solid var(--cor-de-borda);
+    background-color: var(--cor-de-fundo-2);
 }
 
 .apresentacao{
