--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ img{
 
 .hamert{
     width: 100%;
+    border: 4px solid
 }
 
 .gif{
@@ -45,11 +46,6 @@ img{
     justify-content: space-between;
     align-items: center;
     flex-direction: row-reverse;
-    margin: 2px 0;
-    padding: 5px;
-    border-radius: 10px;
-    border: 2px solid var(--cor-de-borda);
-    background-color: var(--cor-de-fundo-2);
 }
 
 .apresentacao{
