--- a/style.css
+++ b/style.css
@@ -34,14 +34,23 @@ header{
 
 .pinhao{
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .vaca{
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .pamonha{
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
 }
 
 .hamert{
