--- a/style.css
+++ b/style.css
@@ -68,7 +68,9 @@ header{
 
 .apresentacao{
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    flex-wrap: nowrap;
+    flex-direction: column;
     margin: 5px 0;
     padding: 15px;
     border-radius: 20px;
