--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ header{
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    border: 4px solid;
+    border-radius: 20px;
+    margin: 5px 0;
 }
 
 .vaca{
@@ -44,6 +47,9 @@ header{
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+    border: 4px solid;
+    border-radius: 20px;
+    margin: 5px 0;
 }
 
 .pamonha{
@@ -51,6 +57,9 @@ header{
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
+     border: 4px solid;
+    border-radius: 20px;
+    margin: 5px 0;
 }
 
 .hamert{
