--- a/style.css
+++ b/style.css
@@ -70,6 +70,14 @@ header{
     flex-direction: row-reverse;
 }
 
+.origem{
+  background-color: var(--cor-de-fundo);
+  border: 4px solid;
+  border-radius: 20px;
+  margin: 5px 0;
+  box-shadow: 0 2px 5px;
+}
+
 .apresentacao{
     display: flex;
     justify-content: center;
