--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: row-reverse;
+    flex-direction: row;
+    align-items: flex-start;
 }
 
 .origem{
