--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ header{
     
 }
 
+.titulo{
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, 1px 1px 0 black, -1px 1px 0 black;
+}
+
 .imagem{
     width: 30%;
     border: 4px solid;
