--- a/style.css
+++ b/style.css
@@ -98,6 +98,7 @@ header{
     border: 4px solid;
     border-radius: 20px;
     margin: 5px 0;
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, 1px 1px 0 black, -1px 1px 0 black;
 }
 
 footer{
