--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ header{
     padding: 15px;
     border-radius: 20px;
     border: 2px solid var(--cor-de-borda);
-    background-color: var(--cor-de-fundo-2);
+    background-color: var(--cor-do-cabeçalho);
+    text-shadow: -1px -1px 0 black, 1px -1px 0 black, 1px 1px 0 black, -1px 1px 0 white;
 }
 
 .titulo{
