--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ header{
     color: var(--cor-de-texto-2);
 }
 
+.frasinha{
+    display: flex;
+    justify-content: center;
+}
+
 .titulo{
     text-shadow: -1px -1px 0 black, 1px -1px 0 black, 1px 1px 0 black, -1px 1px 0 black;
 }
