--- a/style.css
+++ b/style.css
@@ -80,6 +80,17 @@ header{
   box-shadow: 0 2px 5px;
 }
 
+.origin{
+  display: flex;
+  justify-content: center;
+  background-color: var(--cor-de-fundo);
+  border: 4px solid;
+  border-radius: 20px;
+  margin: 5px 0;
+  padding: 15px;
+  box-shadow: 0 2px 5px;
+}
+
 .apresentacao{
     display: flex;
     justify-content: center;
