--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 :root{
---cor-de-fundo: #EAFAEA;
+--cor-de-fundo: #d4ffd4;
 --cor-do-cabeçalho: #780C28;
 --cor-de-fundo-2: #CAE0BC;
 --cor-de-borda: black;
