--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 
 :root{
 --cor-de-fundo: #e2ffe2;
---cor-do-cabeçalho: #780C28;
+--cor-do-cabeçalho: #4e071a;
 --cor-de-fundo-2: #CAE0BC;
 --cor-de-borda: black;
 --cor-de-texto-2: whitesmoke;
---cor-de-fundo-3: #6E8E59;
+--cor-de-fundo-3: #780C28;
 }
 
 body{
