--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ header{
 }
 
 .frase{
+    display: flex;
     margin: 5px 0;
-    padding: 40px;
+    padding: 50px;
     border-radius: 20px;
     border: 2px solid var(--cor-de-borda);
     background-color: var(--cor-de-fundo-3);
