--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ header{
 
 .frase{
     display: flex;
+    justify-content: space-evenly;
     margin: 5px 0;
     padding: 50px;
     border-radius: 20px;
