--- a/style.css
+++ b/style.css
@@ -135,13 +135,12 @@ header{
 
 footer{
     display: flex;
-    justify-content: center;
-    margin: 5px 0;
+    justify-content: space-evenly;
     padding: 15px;
     border-radius: 20px;
     border: 2px solid var(--cor-de-borda);
-    background-color: var(--cor-de-fundo-3);
     color: var(--cor-de-texto-2);
+    background-color: var(--cor-do-cabeçalho);
        
     
 }
