--- a/style.css
+++ b/style.css
@@ -145,3 +145,79 @@ footer{
        
     
 }
+
+/* MEDIA QUERY PARA CELULARES E TABLETS */
+@media (max-width: 768px) {
+
+  header {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .titulo {
+    font-size: 1.2rem;
+  }
+ 
+  /*1rem = 16px*/
+
+  .frase, .origin {
+    flex-direction: column;
+    padding: 20px;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  .imagem, .prod {
+    width: 100%;
+    height: auto;
+  }
+
+  .papa {
+    align-items: center;
+  }
+
+  .gif {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hamert {
+    width: 100%;
+    height: auto;
+  }
+
+  .produtor {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .origem {
+    padding: 10px;
+    font-size: 1rem;
+  }
+
+  .apresentacao, .beneficios, .produtores {
+    padding: 10px;
+    font-size: 1rem;
+  }
+
+  h2 {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+
+  h3 {
+    font-size: 1.1rem;
+    text-align: center;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  footer .titulo {
+    font-size: 1rem;
+    text-align: center;
+  }
+}
